fix: Fix scrollbar style for firefox

--- a/src/style/aside.css
+++ b/src/style/aside.css
@@ -11,6 +11,9 @@
     display: block;
     overflow-y: scroll;
     background-color: var(--blue);
+    /* Scrollbar Firefox */
+    scrollbar-color: var(--red) var(--dark);
+    scrollbar-width: thin;
   }
 
   .aside::-webkit-scrollbar {
@@ -38,7 +41,7 @@
     justify-content: center;
     align-items: center;
   }
-  
+
   .nav-icon > div {
     background-image: url('../images/space-shuttle.svg');
     background-repeat: no-repeat;
